<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.gmrtrd.andmil.myapplication.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/imagenLoginLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagenLoginLayout">

        <EditText
            android:id="@+id/usuarioLogin"
            android:hint="@string/usuarioLoginHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/claveLogin"
            android:hint="@string/claveLoginHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/botonIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonIngresar"
            android:onClick="ingresoClick"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:paddingTop="26dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/etiquetaRegistro"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoLogin"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/linkRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/registroLogin"
            android:layout_gravity="center_horizontal"
            android:onClick="regristroClick"/>

        <TextView
            android:id="@+id/linkRecuperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/olvidoClave"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:onClick="olvidoClick"/>

    </LinearLayout>
</LinearLayout>

</ScrollView>
