<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/intro1"
    android:layout_weight="10"
    android:id="@+id/fragment5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:layout_weight="3"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:paddingRight="32dp"
        android:textSize="28sp"
        android:text="@string/tituloFragment5"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5">

        <TextView
            android:id="@+id/conCuentaLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/conCuenta"
            android:fontFamily="sans-serif"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:paddingTop="26dp"
            android:layout_gravity="center_horizontal"
            android:onClick="conCuentaClickListener"/>

        <TextView
            android:id="@+id/sinCuentaLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sinCuenta"
            android:fontFamily="sans-serif"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:paddingTop="26dp"
            android:layout_gravity="center_horizontal"
            android:onClick="sinCuentaClickListener"/>


    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>